--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ a {
 }
 
 .container {
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0.5em auto;
   text-align: center;
 }
@@ -31,22 +31,57 @@ a {
 
 #share-icon {
   cursor: pointer;
-  background-color: #fff;
+  border: 1px dashed #98a2b3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  transition: all 300ms linear;
 }
 
 #share-icon:hover {
-  background-color: #98a2b3;
+  background-color: #d0d5dd;
 }
 
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  margin: 0 auto; 
+}
 
 #profile_id {
-  width: 90px;
-  height: 90px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-bottom: 0.5em;
+  position: relative;
+  margin-bottom: 1em;
+  cursor: pointer;
 }
+
+.image_hover{
+  transition: all 400ms linear;
+  position: absolute;
+  opacity: 0;
+}
+
+.image_focused{
+  position: absolute;
+  opacity: 0;
+  visibility: hidden; 
+}
+
+.image_hover:hover{
+  opacity: 1;
+  cursor: pointer;
+}
+
+.image_focused:focus{
+  opacity: 1;
+  cursor: pointer;
+  visibility: visible;
+}
+
 
 #twitter {
   font-size: 1.3rem;
