--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 
 ul li{
   list-style: none;
-  margin-bottom: 1em;
 }
 
 a {
@@ -51,30 +50,50 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center; 
-  margin: 0 auto; 
+  margin: 0 auto;
+  margin-bottom: 1em;
 }
 
-#profile__img {
-  position: relative;
-  margin-bottom: 1em;
-  cursor: pointer;
+#profile-section {
+  /* background-color: yellow;
+  z-index: 101;
   width: 100px;
   height: 100px;
-  object-fit: cover;
   border-radius: 50%;
+  position: relative;
+  margin-bottom: 1em;
+  cursor: pointer; */
+  position: relative;
+  width: 50%;
 }
 
-#profile__img::after {
+/* #profile-section:hover {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 100;
+} */
+
+#profile__img {
+  width: 100px;
+  height: 100px; 
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 0.6em;
+}
+
+/* #profile__img::after {
   content: '';
   display: block;
   width: 0;
-  height: 3px;
-  background: #fff;
+  height: 0;
+  background: rgba(0, 0, 0, 0.4);
   transition: width .3s;
-}
+} */
 
-.profile__img:hover:after {
-  width: 100%;
+.profile__img:hover {
+  /* width: 100px;
+  height: 100px; */
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .image_hover{
@@ -112,7 +131,8 @@ a {
 }
 
 #links-section {
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .button {
@@ -125,6 +145,7 @@ a {
   background-color: #d0d5dd;
   transition: all 400ms linear;
   font-weight: 500;
+  margin-bottom: 1em;
 }
 
 .button:hover {
