--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,6 @@ a {
 } */
 
 .profile__img:hover {
-  /* width: 100px;
-  height: 100px; */
   background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -101,24 +99,6 @@ a {
   position: absolute;
   opacity: 0;
 }
-
-/* .image_focused{
-  position: absolute;
-  opacity: 0;
-  visibility: hidden; 
-}
-
-.image_hover:hover{
-  opacity: 1;
-  cursor: pointer;
-}
-
-.image_focused:focus{
-  opacity: 1;
-  cursor: pointer;
-  visibility: visible;
-} */
-
 
 #twitter {
   font-size: 1.3rem;
@@ -145,7 +125,7 @@ a {
   background-color: #d0d5dd;
   transition: all 400ms linear;
   font-weight: 500;
-  margin-bottom: 1em;
+  margin: 1em auto;
 }
 
 .button:hover {
